# socialInfluence

./: .spyderproject  LICENSE  README.md  test.py
1d_potential/: main.cpp  switcherKernel.cu
correlation/: CMakeLists.txt  main.cpp  switcherKernel.cu
correlation/include/: params.h
ind_inf/: main.cpp
potential/: main.cpp  potential0-15.npy  potential0-50.npy  potential10-50.npy  potential2-15.npy  potential5-50.npy  runSwitcher  submit.sl  switcherKernel.cu
potential_v2/: CMakeLists.txt  main.cpp  switcherKernel.cu
potential_v2/include/: params.h  switcherKernel.h
py_analysis/: 1D_model.py  conditional_P.py  conditional_PAVK.py  final_model.py  influence.py  mfpt.py  plotPotential.py  potential5-50.npy  simSquare.py  transProb.py
simulation_v2/: CMakeLists.txt  main.cpp  main1.cpp
simulation_v2/visuals/: CMakeLists.txt  plotGrid.h  visual.cpp
ts_inf/: main.cpp  runSwitcher  time_series0.npy  time_series4.npy  time_series8.npy
ts_inf/include/: switcherKernel.h
wg_inf/: aplsq0.npy  aplsq1.npy  aplsq10.npy  aplsq11.npy  aplsq13.npy  aplsq14.npy  aplsq15.npy  aplsq19.npy  aplsq2.npy  aplsq20.npy  aplsq3.npy  aplsq4.npy  aplsq5.npy  aplsq6.npy  aplsq7.npy  aplsq8.npy  aplsq9.npy  cost2q0.npy  cost2q1.npy  cost2q2.npy  cost2q3.npy  cost2q4.npy  cost2q5.npy  costq0.npy  costq1.npy  costq10.npy  costq11.npy  costq12.npy  costq13.npy  costq14.npy  costq15.npy  costq16.npy  costq17.npy  costq18.npy  costq19.npy  costq2.npy  costq20.npy  costq3.npy  costq4.npy  costq5.npy  (+27 more)
wg_inf/include/: params.h  switcherKernel.h
